k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-ingress
  labels:
    app: todo-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 31000
  selector:
    app: todo-ingress
