k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
    - host: "domain.com"
      http:
        paths:
          - pathType: Prefix
            path: "/test"
            backend:
              service:
                name: todo-ingress
                port:
                  number: 80
    - host: "*.domain.com"
      http:
        paths:
          - pathType: Prefix
            path: "/test"
            backend:
              service:
                name: todo-ingress
                port:
                  number: 80
